--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2",
+    "pretty": "^2.0.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
